# BitGraph

./: CMakeLists.txt  README.md
bitscan/: CMakeLists.txt  README.md  bbalg.h  bbalgorithm.h  bbconfig.h  bbintrinsic.h  bbintrinsic_sparse.h  bbobject.h  bbscan.h  bbscanFeature.cpp  bbscanFeature.h  bbscan_external.cpp  bbscan_external.h  bbscan_sparse.h  bbscanning.h  bbscanningFeature.h  bbsentinel.cpp  bbsentinel.h  bbset.cpp  bbset.h  bbset_sparse.cpp  bbset_sparse.h  bbtypes.h  bitblock.cpp  bitblock.h  bitboard.cpp  bitboard.h  bitboardn.cpp  bitboardn.h  bitboards.cpp  bitboards.h  bitscan.h  bitset.cpp  bitset.h  config.h  tables.cpp  tables.h
bitscan/tests/: CMakeLists.txt  gtest_main.cc  test_algorithms.cpp  test_bbscan.cpp  test_bbscan_external.cpp  test_bbscan_internal.cpp  test_bbscan_nested.cpp  test_bbscan_sparse.cpp  test_bbscan_sparse_nested.cpp  test_bbsentinel.cpp  test_bitblock.cpp  test_bitscanning.cpp  test_bitset.cpp  test_bitset_sparse.cpp  test_bitstring_N.cpp  test_bitstrings.cpp  test_example.cpp  test_masking.cpp  test_masks.cpp  test_sentinels.cpp  test_sparse.cpp
example/: CMakeLists.txt  main.cpp  readme.txt
example_external_linking/: CMakeLists.txt  bitstrings.cpp  graph.cpp  main.cpp
graph/: CMakeLists.txt  filter_graph_encoding_type.h  graph.h  graph_gen.h  kcore.h  legal.txt  readme.md  simple_graph.cpp  simple_graph.h  simple_graph_ew.cpp  simple_graph_ew.h  simple_graph_w.cpp  simple_graph_w.h  simple_sparse_graph.h  simple_sparse_ugraph.h  simple_ugraph.cpp  simple_ugraph.h
graph/algorithms/: decode.cpp  decode.h  degree_ugraph.h  filter_graph_sort_type.h  graph_conversions.h  graph_fast_sort.h  graph_fast_sort_edge_weighted.h  graph_fast_sort_weighted.h  graph_func.h  graph_gen.h  graph_map.h  graph_sort.h  kcore.h
graph/data/: sample.clq  star.clq  toy_ew_dimacs.txt
graph/examples/: CMakeLists.txt  gen_random.cpp  gen_random_bench.cpp  graph_formats.cpp  lb_kcore.cpp
graph/formats/: dimacs_format.h  dimacs_reader.h  edges_format.h  edges_reader.h  graph_inout.h  mmio.cpp  mmio.h  mmx_format.h  mmx_reader.h  yED_format.h
graph/tests/: CMakeLists.txt  gtest_main.cpp  test_decode.cpp  test_degree.cpp  test_format.cpp  test_func.cpp  test_graph.cpp  test_graph_conversions.cpp  test_graph_fast_sort.cpp  test_graph_fast_sort_weighted.cpp  test_graph_map.cpp  test_graph_sort.cpp  test_kcore.cpp  test_random_graph.cpp  test_sparse_graph.cpp  test_ugraph.cpp  test_wegraph.cpp  test_wgraph.cpp
install/: CMakeLists.txt  README.md  readme.txt
install/src/: bitstrings.cpp  graph.cpp  graph_basic.cpp  graph_rand.cpp  graph_sort.cpp
src/: CMakeLists.txt  README.md  cmake_install_bitgraph
src/bitscan/: CMakeLists.txt  README.md  bbalgorithm.h  bbconfig.h  bbexcep_hand.h  bbexpr.h  bbobject.h  bbscan.h  bbscan_sparse.h  bbsentinel.cpp  bbsentinel.h  bbset.cpp  bbset.h  bbset_sparse.cpp  bbset_sparse.h  bbtypes.h  bbutils.h  bitblock.cpp  bitblock.h  bitscan.h  tables.cpp  tables.h
src/bitscan/tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_algorithms.cpp  test_bbexpr.cpp  test_bbscan.cpp  test_bbscan_nested.cpp  test_bbscan_sparse.cpp  test_bbscan_sparse_nested.cpp  test_bbsentinel.cpp  test_bitblock.cpp  test_bitscan.vcxproj  test_bitscan.vcxproj.filters  test_bitset.cpp  test_bitset_sparse.cpp  test_example.cpp  test_masks.cpp
src/graph/: CMakeLists.txt  filter_graph_encoding_type.h  graph.h  graph_basic.h  graph_edge_weighted.h  graph_excep_hand.h  graph_globals.h  graph_traits.h  graph_types.h  graph_vertex_weighted.h  legal.txt  readme.md  simple_graph.cpp  simple_graph.h  simple_graph_ew.cpp  simple_graph_ew.h  simple_graph_w.cpp  simple_graph_w.h  simple_sparse_graph.h  simple_sparse_ugraph.h  simple_ugraph.cpp  simple_ugraph.h
src/graph/algorithms/: decode.cpp  decode.h  filter_graph_sort_type.h  graph_conversions.h  graph_fast_sort.h  graph_fast_sort_edge_weighted.h  graph_fast_sort_weighted.h  graph_func.h  graph_gen.h  graph_map.h  graph_sort.h  kcore.h
src/graph/data/: brock200_3.clq  brock200_4.clq  dimacs_format_graph.clq  mug100_25.col  r10_0.2_23.txt  r10_0.3_0.txt  sample.clq  star.clq  toy_ew_dimacs.txt
src/graph/examples/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gen_random_bench.cpp  gen_random_benchmark.vcxproj  gen_random_benchmark.vcxproj.filters  graph_formats.cpp  graph_formats.vcxproj  graph_formats.vcxproj.filters  kcore.vcxproj  kcore.vcxproj.filters  lb_kcore.cpp
src/graph/formats/: dimacs_format.h  edges_format.h  mmio.cpp  mmio.h  mmx_format.h  yED_format.h
src/graph/tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_clq_func.cpp  test_decode.cpp  test_format.cpp  (+15 more)
src/tclap/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
src/utils/: CMakeLists.txt  README.md  batch.h  batch_analyser.cpp  batch_analyser.h  benchmark.cpp  benchmark.h  common.cpp  common.h  common_paths.h  common_types.cpp  common_types.h  file.h  info_analyser.cpp  info_analyser.h  logger.cpp  logger.h  prec_timer.h  result.cpp  result.h  task.h  test_analyser.cpp  test_analyser.h  thread.h  utils.h
utils/: CMakeLists.txt  batch.h  benchmark.cpp  benchmark.h  biicode.conf  common.cpp  common.h  common_paths.h  common_types.cpp  common_types.h  file.h  info_analyser.cpp  info_analyser.h  logger.cpp  logger.h  prec_timer.h  result.cpp  result.h  test_analyser.cpp  test_analyser.h  thread.h
utils/info/: info_base.cpp  info_base.h  info_clq.cpp  info_clq.h
utils/tests/: CMakeLists.txt  test_batch.cpp  test_benchmark.cpp  test_common.cpp  test_file.cpp  test_info.cpp  test_infoAnalyser.cpp  test_info_clq.cpp  test_logger.cpp  test_precise_timer.cpp  test_result.cpp  test_tanal.cpp  test_testAnalyser.cpp  test_thread.cpp
(+113 files in other folders)
